--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "create-react-class": "15.6.3",
+    "create-react-class": "^15.7.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "shadow-cljs": "^2.18.0"
+    "shadow-cljs": "^2.18.0",
+    "styletron-react": "^6.1.0",
+    "styletron-engine-atomic": "^1.5.0"
   }
 }
