--- a/ansible/roles/datomic/tasks/main.yml
+++ b/ansible/roles/datomic/tasks/main.yml
@@ -1,12 +1,20 @@
 ---
-- name: Ensure maven directory
+- name: Ensure Maven and Datomic directories
   file:
-    path: "/home/deploy/.m2"
+    path: "{{ item }}"
     state: directory
     owner: deploy
     group: deploy
+  with_items:
+    - "/home/deploy/.m2"
+    - "/home/deploy/.datomic"
 
 - name: Copy maven settings for dev-local
   template:
     src: templates/settings.xml.j2
     dest: /home/deploy/.m2/settings.xml
+
+- name: Copy dev-local storage path config file
+  template:
+    src: templates/dev-local.edn.j2
+    dest: /home/deploy/.datomic/dev-local.edn
